Bug 310433 - Should remove the immature --background-mode option
Summary: Should remove the immature --background-mode option
Status: RESOLVED FIXED
Alias: None
Product: konsole
Classification: Applications
Component: general (other bugs)
Version First Reported In: 2.9.3
Platform: unspecified Linux
: NOR task
Target Milestone: ---
Assignee: Konsole Bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2012-11-21 09:08 UTC by Jekyll Wu
Modified: 2014-02-02 02:59 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 4.11
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Jekyll Wu 2012-11-21 09:08:49 UTC
See the thread on konsole-devel@ : http://lists.kde.org/?t=135316612800002&r=1&w=2

This ticket is created mainly as a reminder.  The removal should not take place before the master is open for feature changes again.

Reproducible: Always
Comment 1 Kurt Hindenburg 2013-02-24 17:30:58 UTC
Git commit 35bb9cf9e79465d252580615f50b4ce8d34e3d34 by Kurt Hindenburg.
Committed on 24/02/2013 at 18:27.
Pushed by hindenburg into branch 'master'.

Remove the the immature --background-mode option

See http://lists.kde.org/?l=konsole-devel&m=135316608321148&w=2 for
details.

FIXED-IN: 4.11

M  +16   -56   src/Application.cpp
M  +0    -4    src/Application.h
M  +0    -3    src/main.cpp

http://commits.kde.org/konsole/35bb9cf9e79465d252580615f50b4ce8d34e3d34
Comment 2 Jekyll Wu 2013-03-04 08:43:47 UTC
Git commit 204e2bc4fe1c8486b0fb5be7bba4990f5e1879cf by Jekyll Wu.
Committed on 04/03/2013 at 09:17.
Pushed by jekyllwu into branch 'master'.

Clean the leftover of the removed --background-mode feature

M  +2    -0    data/updaters/CMakeLists.txt
M  +0    -3    desktop/CMakeLists.txt
D  +0    -94   desktop/quick-access-konsole.desktop
M  +0    -6    doc/manual/index.docbook

http://commits.kde.org/konsole/204e2bc4fe1c8486b0fb5be7bba4990f5e1879cf
Comment 3 Jekyll Wu 2013-03-04 08:56:09 UTC
Git commit ef2cde1d764645ef75cc055dc661ef033b0ff8a9 by Jekyll Wu.
Committed on 04/03/2013 at 09:53.
Pushed by jekyllwu into branch 'master'.

Add the missing file

A  +4    -0    data/updaters/konsole_remove_background_mode.upd

http://commits.kde.org/konsole/ef2cde1d764645ef75cc055dc661ef033b0ff8a9
Comment 4 bart_bender@terra.es 2014-02-02 02:59:21 UTC
I have always used this option with my autostart user scripts. It's simple and people do not report errors, because their characteristics are correct. It is a console with F12 fast access.

Bad decission in my opinion