Remove the the immature --background-mode option

See http://lists.kde.org/?l=konsole-devel&m=135316608321148&w=2 for
details.

FIXED-IN: 4.11
BUG: 310433