src/Application.h
@@ -69,13 +69,10 @@ private slots:
     void createWindow(Profile::Ptr profile , const QString& directory);
     void detachView(Session* session);
 
-    void toggleBackgroundInstance();
-
 private:
     void init();
     void listAvailableProfiles();
     void listProfilePropertyInfo();
-    void startBackgroundMode(MainWindow* window);
     bool processHelpArgs(KCmdLineArgs* args);
     MainWindow* processWindowArgs(KCmdLineArgs* args);
     Profile::Ptr processProfileSelectArgs(KCmdLineArgs* args);
@@ -84,7 +81,6 @@ private:
     void createTabFromArgs(KCmdLineArgs* args, MainWindow* window,
                            const QHash<QString, QString>&);
 
-    MainWindow* _backgroundInstance;
 };
 }
 #endif  // APPLICATION_H
